--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@antfu/eslint-config": "^2.8.3",
     "vue": "^3.4.15",
+    "vue-component-type-helpers": "^1.8.27",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "sass": "^1.77.6",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
